fixed blog collapse text bug

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
 /* Main style sheet for Nermin Kekic Blog */
 
+
 /* Navigation */
 .navbar {
-    z-index: 20;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 2000;
+    border: dashed green;
 }
 
 .bg-transparant {
@@ -21,20 +26,21 @@
 
 
 /* Jumbotron */
+.main-banner {
 
-.jumbotron {
-    position: absolute;
-    top: 0;
     width: 100%;
-
+    border: dashed yellow;
 }
+
+.jumbotron {}
 
 /* Blog Post  */
 
 .container {
-    top: 0;
-    width: 100%;
-    height: 100%;
+
+    border: dashed red;
+    margin-top: 50px;
+
 }
 
 /* Media query */
